
[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask",
    "matrix-nio==0.24.0",
    "fpdf",
    "aiohttp",
    "nest_asyncio",
    "beautifulsoup4",
    "nio>=3.4.2",
    "requests>=2.32.3",
]
